@@ -366,46 +366,48 @@
 /******************************************************************************/
 
 /************************* PLL Parameters *************************************/
-#if defined(STM32F40_41xxx) || defined(STM32F427_437xx) || defined(STM32F429_439xx) || defined(STM32F401xx)
-/* PLL_VCO = (HSE_VALUE or HSI_VALUE / PLL_M) * PLL_N */
-#define PLL_M      25
-#elif defined (STM32F446xx)
-#define PLL_M      8
-#elif defined (STM32F411xE)
 
-#if defined(USE_HSE_BYPASS)
-#define PLL_M      8    
-#else  
-#define PLL_M      16
-#endif /* USE_HSE_BYPASS */
+#if defined(STM32F427_437xx) || defined(STM32F429_439xx) || defined(STM32F446xx)
+/* PLL_VCO = (HSE_VALUE / PLL_M) * PLL_N = 360 MHz*/
+#define PLL_M      (HSE_VALUE/1000000)
+#define PLL_N      360
+/* SYSCLK = PLL_VCO / PLL_P = 180 MHz */
+#define PLL_P      2
+#endif /* STM32F427_437x || STM32F429_439xx || STM32F446xx */
 
-#endif /* STM32F40_41xxx || STM32F427_437xx || STM32F429_439xx || STM32F401xx */  
+#if defined(STM32F40_41xxx)
+/* PLL_VCO = (HSE_VALUE / PLL_M) * PLL_N = 336 MHz */
+#define PLL_M      (HSE_VALUE/1000000)
+#define PLL_N      336
+/* SYSCLK = PLL_VCO / PLL_P = 168 MHz */
+#define PLL_P      2
+#endif /* STM32F401xx */
+
+#if defined(STM32F401xx)
+/* PLL_VCO = (HSE_VALUE / PLL_M) * PLL_N = 336 MHz */
+#define PLL_M      (HSE_VALUE/1000000)
+#define PLL_N      336
+/* SYSCLK = PLL_VCO / PLL_P = 84 MHz */
+#define PLL_P      4
+#endif /* STM32F401xx */
+
+#if defined(STM32F411xE)
+/* PLL_VCO = (HSE_VALUE / PLL_M) * PLL_N = 400 MHz */
+#define PLL_M      (HSE_VALUE/1000000)
+#define PLL_N      400
+/* SYSCLK = PLL_VCO / PLL_P = 100 MHz */
+#define PLL_P      4   
+#endif /* STM32F411xx */
 
 /* USB OTG FS, SDIO and RNG Clock =  PLL_VCO / PLLQ */
 #define PLL_Q      7
+// NOTE: PLL loop frequency must be 336 MHz to generate the
+// 48 MHzJ clock necessary for the USB subsystem.
 
 #if defined(STM32F446xx)
 /* PLL division factor for I2S, SAI, SYSTEM and SPDIF: Clock =  PLL_VCO / PLLR */
 #define PLL_R      7
 #endif /* STM32F446xx */ 
-
-#if defined(STM32F40_41xxx) || defined(STM32F427_437xx) || defined(STM32F429_439xx) || defined(STM32F446xx)
-#define PLL_N      360
-/* SYSCLK = PLL_VCO / PLL_P */
-#define PLL_P      2
-#endif /* STM32F40_41xxx || STM32F427_437x || STM32F429_439xx || STM32F446xx */
-
-#if defined(STM32F401xx)
-#define PLL_N      336
-/* SYSCLK = PLL_VCO / PLL_P */
-#define PLL_P      4
-#endif /* STM32F401xx */
-
-#if defined(STM32F411xE)
-#define PLL_N      400
-/* SYSCLK = PLL_VCO / PLL_P */
-#define PLL_P      4   
-#endif /* STM32F411xx */
 
 /******************************************************************************/
 
